[metadata]
description-file = README.md
# replace with your username:
name = grovepi
version = 1.4.5
author = Poh Tze Ven
author_email = frasker@hotmail.com
description = Fake drivers for using the GrovePi+ in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chaosAD/fakegrovepi
project_urls =
    Bug Tracker = https://github.com/chaosAD/fakegrovepi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
